k8s_multi/translation-service-alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: translation-service-alb-ingress
  namespace: translation-service-a
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:660242195002:certificate/83cc3b71-7d65-4476-b7b9-516374638473
    alb.ingress.kubernetes.io/actions.ssl-redirect: >-
      {"Type":"redirect","RedirectConfig":{"Protocol":"HTTPS","Port":"443","StatusCode":"HTTP_301"}}
    alb.ingress.kubernetes.io/healthcheck-path: "/health"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "10"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=60
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: translation-service-group
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: translation-cloud.at
      http:
        paths:
          # Default root path points to Login-Service
          - path: /
            pathType: Prefix
            backend:
              service:
                name: login-service
                port:
                  number: 5000
          # Route to Transcription Service
          - path: /transcribe
            pathType: Prefix
            backend:
              service:
                name: translation-service
                port:
                  number: 5001
          # Route to Live Translation Service
          - path: /translate_live
            pathType: Prefix
            backend:
              service:
                name: translation-service
                port:
                  number: 5001
          # Route /save_meeting => translation-service
          - path: /save_meeting
            pathType: Prefix
            backend:
              service:
                name: translation-service
                port:
                  number: 5001
          # Route /get_last_meetings => translation-service
          - path: /get_last_meetings
            pathType: Prefix
            backend:
              service:
                name: translation-service
                port:
                  number: 5001

          # Route /download_meeting => translation-service
          - path: /download_meeting
            pathType: Prefix
            backend:
              service:
                name: translation-service
                port:
                  number: 5001
           # Route /get_user_info => translation-service
          - path: /get_user_info
            pathType: Prefix
            backend:
              service:
                name: translation-service
                port:
                  number: 5001
          - path: /delete_meeting
            pathType: Prefix
            backend:
              service:
                name: translation-service
                port:
                  number: 5001
